--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     },
     "dependencies": {
         "@vueuse/core": "^10.7.2",
+        "axios": "^1.6.6",
         "dayjs": "^1.11.10",
+        "echarts": "^5.4.3",
         "element-plus": "2.5.3",
         "js-base64": "^3.7.6",
         "lodash": "^4.17.21",
+        "mitt": "^3.0.1",
+        "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
+        "qs": "^6.11.2",
         "uuid": "^9.0.1",
         "vue": "^3.4.15 ",
         "vue-router": "^4.2.5"
@@ -26,11 +31,16 @@
         "@commitlint/config-conventional": "^18.5.0",
         "@vitejs/plugin-vue": "^4.5.2",
         "@vitejs/plugin-vue-jsx": "^3.1.0",
+        "@vue/tsconfig": "^0.5.1",
+        "autoprefixer": "^10.4.17",
         "commitizen": "^4.3.0",
         "cz-customizable": "^7.0.0",
         "eslint": "^8.56.0",
+        "eslint-plugin-vue": "^9.20.1",
         "husky": "8.0.1",
         "lint-staged": "^15.2.0",
+        "postcss-pxtorem": "^6.1.0",
+        "sass": "^1.70.0",
         "typescript": "^5.2.2",
         "vite": "^5.0.8",
         "vue-tsc": "^1.8.25"
