--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "name": "app-center",
     "private": true,
-    "version": "0.0.0",
-    "type": "module",
+    "version": "1.0.0",
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc && vite build",
@@ -15,7 +14,7 @@
         "axios": "^1.6.6",
         "dayjs": "^1.11.10",
         "echarts": "^5.4.3",
-        "element-plus": "2.5.3",
+        "element-plus": "^2.5.3",
         "js-base64": "^3.7.6",
         "lodash": "^4.17.21",
         "mitt": "^3.0.1",
@@ -29,6 +28,7 @@
     "devDependencies": {
         "@commitlint/cli": "^18.5.0",
         "@commitlint/config-conventional": "^18.5.0",
+        "@typescript-eslint/parser": "^6.19.1",
         "@vitejs/plugin-vue": "^4.5.2",
         "@vitejs/plugin-vue-jsx": "^3.1.0",
         "@vue/tsconfig": "^0.5.1",
