--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,10 @@
 
         /* Linting */
         "strict": true,
-        "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": false,
+        "noUnusedLocals": false
     },
     "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
     "references": [{ "path": "./tsconfig.node.json" }]
