--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "app-center",
     "private": true,
     "version": "1.0.0",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc && vite build",
