--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,19 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": false,
-        "noUnusedLocals": false
+        "noUnusedLocals": false,
+
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        }
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.tsx",
+        "src/**/*.vue",
+        "./auto-imports.d.ts",
+        "./components.d.ts"
+    ],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
