--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "devDependencies": {
         "@commitlint/cli": "^18.5.0",
         "@commitlint/config-conventional": "^18.5.0",
+        "@types/lodash": "^4.14.202",
         "@typescript-eslint/parser": "^6.19.1",
         "@vitejs/plugin-vue": "^4.5.2",
         "@vitejs/plugin-vue-jsx": "^3.1.0",
