--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "unplugin-auto-import": "^0.17.4",
         "unplugin-vue-components": "^0.26.0",
         "vite": "^5.0.8",
+        "vite-plugin-eslint": "^1.8.1",
         "vue-tsc": "^1.8.25"
     },
     "lint-staged": {
