--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
 
         /* Linting */
         "strict": true,
-        "noUnusedParameters": true,
+        "noUnusedParameters": false,
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": false,
         "noUnusedLocals": false,
