--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "app-center",
+    "name": "appcenter",
     "private": true,
     "version": "1.0.0",
     "type": "module",
@@ -22,6 +22,7 @@
         "mitt": "^3.0.1",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
+        "pinia-plugin-persistedstate": "^3.2.1",
         "qs": "^6.11.2",
         "uuid": "^9.0.1",
         "vue": "^3.4.15 ",
