--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
         "src/**/*.tsx",
         "src/**/*.vue",
         "./auto-imports.d.ts",
-        "./components.d.ts"
+        "./components.d.ts",
+        "./global.d.ts"
     ],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
