--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ VITE_APP_TITLE=应用中心
 VITE_ROUTE_MODE=frontend
 
 # 服务端地址
-VITE_BASE_REQ_URL=http://localhost:3000
+VITE_BASE_URL=http://localhost:3000
+
+# 超时时间（单位：秒）
+VITE_TIMEOUT=8
